<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/biography_form"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school" />

        <EditText
            android:id="@+id/edit_text_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/school_hint"
            android:inputType="textPersonName"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/graduation_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graduation_year" />

        <EditText
            android:id="@+id/edit_text_graduation_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/graduation_year_hint"
            android:inputType="textPersonName"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:columnCount="3"
                android:rowCount="4">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:text="@string/b_s" />

                <RadioButton

                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:text="@string/bas" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_a" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bfa" />


                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_a" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mfa" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mba" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ph_d" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_d" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dds" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/j_d" />

            </GridLayout>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textViewMajor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_text" />

        <Spinner
            android:id="@+id/spinnerMajor"
            android:layout_marginStart="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/majors"
            android:spinnerMode="dropdown"
            tools:ignore="TouchTargetSizeCheck">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/favorite_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_activities" />

        <EditText
            android:id="@+id/edit_text_favorite_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:autofillHints=""
            android:ems="10"
            android:hint="@string/favorite_activities_hint"
            android:inputType="textPersonName"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_text"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:clickable="true"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_centerHorizontal="true"
            android:focusable="true" />

    </RelativeLayout>

</LinearLayout>